@@ -1,5 +1,10 @@
 2011-11-11  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* libmisc/copydir.c: Avoid conflict with glibc. Rename error to
+	error_acl.
+
+2011-11-11  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* man/newusers.8.xml: Document the optional file argument.
 	* man/newusers.8.xml: Fix the documentation of the inputs' format.
 
